; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_appbar.c_testwindow_setpos.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_appbar.c_testwindow_setpos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.testwindow_info = type { i32, %struct.TYPE_4__, %struct.TYPE_4__, i64, i32 }
%struct.TYPE_4__ = type { i64, i64, i64, i64 }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_4__, i32 }

@GWLP_USERDATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"got unexpected ABN_POSCHANGED notification\0A\00", align 1
@.str.1 = private unnamed_addr constant [62 x i8] c"Some Win95 and NT4 systems send messages to removed taskbars\0A\00", align 1
@ABM_QUERYPOS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [29 x i8] c"SHAppBarMessage returned %i\0A\00", align 1
@.str.3 = private unnamed_addr constant [48 x i8] c"ABM_QUERYPOS changed top of rect from %i to %i\0A\00", align 1
@.str.4 = private unnamed_addr constant [50 x i8] c"ABM_QUERYPOS changed right of rect from %i to %i\0A\00", align 1
@.str.5 = private unnamed_addr constant [49 x i8] c"ABM_QUERYPOS changed left of rect from %i to %i\0A\00", align 1
@.str.6 = private unnamed_addr constant [51 x i8] c"ABM_QUERYPOS changed bottom of rect from %i to %i\0A\00", align 1
@ABM_SETPOS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @testwindow_setpos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @testwindow_setpos(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.testwindow_info*, align 8
  %4 = alloca %struct.TYPE_5__, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @GWLP_USERDATA, align 4
  %8 = call i64 @GetWindowLongPtrA(i32 %6, i32 %7)
  %9 = inttoptr i64 %8 to %struct.testwindow_info*
  store %struct.testwindow_info* %9, %struct.testwindow_info** %3, align 8
  %10 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %11 = icmp ne %struct.testwindow_info* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 (i32, i8*, ...) @ok(i32 %12, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %15 = icmp ne %struct.testwindow_info* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %1
  %17 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %18 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %17, i32 0, i32 4
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16, %1
  br label %222

22:                                               ; preds = %16
  %23 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %24 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %23, i32 0, i32 3
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = call i32 @win_skip(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.1, i64 0, i64 0))
  br label %222

29:                                               ; preds = %22
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  store i32 48, i32* %30, align 8
  %31 = load i32, i32* %2, align 4
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 3
  store i32 %31, i32* %32, align 8
  %33 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %34 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  store i32 %35, i32* %36, align 4
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %38 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %39 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %38, i32 0, i32 2
  %40 = bitcast %struct.TYPE_4__* %37 to i8*
  %41 = bitcast %struct.TYPE_4__* %39 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %40, i8* align 8 %41, i64 32, i1 false)
  %42 = load i32, i32* @ABM_QUERYPOS, align 4
  %43 = call i64 @SHAppBarMessage(i32 %42, %struct.TYPE_5__* %4)
  store i64 %43, i64* %5, align 8
  %44 = load i64, i64* %5, align 8
  %45 = load i64, i64* @TRUE, align 8
  %46 = icmp eq i64 %44, %45
  %47 = zext i1 %46 to i32
  %48 = load i64, i64* %5, align 8
  %49 = call i32 (i32, i8*, ...) @ok(i32 %47, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i64 %48)
  %50 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %51 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  switch i32 %52, label %185 [
    i32 131, label %53
    i32 130, label %86
    i32 129, label %119
    i32 128, label %152
  ]

53:                                               ; preds = %29
  %54 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %55 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %54, i32 0, i32 2
  %56 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i32 0, i32 0
  %57 = load i64, i64* %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 0
  %60 = load i64, i64* %59, align 8
  %61 = icmp eq i64 %57, %60
  %62 = zext i1 %61 to i32
  %63 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %64 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %63, i32 0, i32 2
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = call i32 (i32, i8*, ...) @ok(i32 %62, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.3, i64 0, i64 0), i64 %66, i64 %69)
  %71 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %72 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %71, i32 0, i32 1
  %73 = load i64, i64* %72, align 8
  %74 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %75 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %74, i32 0, i32 2
  %76 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %75, i32 0, i32 1
  %77 = load i64, i64* %76, align 8
  %78 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %79 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %78, i32 0, i32 2
  %80 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %79, i32 0, i32 0
  %81 = load i64, i64* %80, align 8
  %82 = sub nsw i64 %77, %81
  %83 = sub nsw i64 %73, %82
  %84 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %85 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %84, i32 0, i32 0
  store i64 %83, i64* %85, align 8
  br label %185

86:                                               ; preds = %29
  %87 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %88 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %87, i32 0, i32 2
  %89 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %88, i32 0, i32 3
  %90 = load i64, i64* %89, align 8
  %91 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %92 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %91, i32 0, i32 3
  %93 = load i64, i64* %92, align 8
  %94 = icmp eq i64 %90, %93
  %95 = zext i1 %94 to i32
  %96 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %97 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %96, i32 0, i32 2
  %98 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %97, i32 0, i32 3
  %99 = load i64, i64* %98, align 8
  %100 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %101 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %100, i32 0, i32 3
  %102 = load i64, i64* %101, align 8
  %103 = call i32 (i32, i8*, ...) @ok(i32 %95, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.4, i64 0, i64 0), i64 %99, i64 %102)
  %104 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %105 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %104, i32 0, i32 2
  %106 = load i64, i64* %105, align 8
  %107 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %108 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %107, i32 0, i32 2
  %109 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %108, i32 0, i32 3
  %110 = load i64, i64* %109, align 8
  %111 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %112 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %111, i32 0, i32 2
  %113 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %112, i32 0, i32 2
  %114 = load i64, i64* %113, align 8
  %115 = sub nsw i64 %110, %114
  %116 = add nsw i64 %106, %115
  %117 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %118 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %117, i32 0, i32 3
  store i64 %116, i64* %118, align 8
  br label %185

119:                                              ; preds = %29
  %120 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %121 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %120, i32 0, i32 2
  %122 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %121, i32 0, i32 2
  %123 = load i64, i64* %122, align 8
  %124 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %125 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %124, i32 0, i32 2
  %126 = load i64, i64* %125, align 8
  %127 = icmp eq i64 %123, %126
  %128 = zext i1 %127 to i32
  %129 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %130 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %129, i32 0, i32 2
  %131 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %130, i32 0, i32 2
  %132 = load i64, i64* %131, align 8
  %133 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %134 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %133, i32 0, i32 2
  %135 = load i64, i64* %134, align 8
  %136 = call i32 (i32, i8*, ...) @ok(i32 %128, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.5, i64 0, i64 0), i64 %132, i64 %135)
  %137 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %138 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %137, i32 0, i32 3
  %139 = load i64, i64* %138, align 8
  %140 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %141 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %140, i32 0, i32 2
  %142 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %141, i32 0, i32 3
  %143 = load i64, i64* %142, align 8
  %144 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %145 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %144, i32 0, i32 2
  %146 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %145, i32 0, i32 2
  %147 = load i64, i64* %146, align 8
  %148 = sub nsw i64 %143, %147
  %149 = sub nsw i64 %139, %148
  %150 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %151 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %150, i32 0, i32 2
  store i64 %149, i64* %151, align 8
  br label %185

152:                                              ; preds = %29
  %153 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %154 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %153, i32 0, i32 2
  %155 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %154, i32 0, i32 1
  %156 = load i64, i64* %155, align 8
  %157 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %158 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %157, i32 0, i32 1
  %159 = load i64, i64* %158, align 8
  %160 = icmp eq i64 %156, %159
  %161 = zext i1 %160 to i32
  %162 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %163 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %162, i32 0, i32 2
  %164 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %163, i32 0, i32 1
  %165 = load i64, i64* %164, align 8
  %166 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %167 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %166, i32 0, i32 1
  %168 = load i64, i64* %167, align 8
  %169 = call i32 (i32, i8*, ...) @ok(i32 %161, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.6, i64 0, i64 0), i64 %165, i64 %168)
  %170 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %171 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %170, i32 0, i32 0
  %172 = load i64, i64* %171, align 8
  %173 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %174 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %173, i32 0, i32 2
  %175 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %174, i32 0, i32 1
  %176 = load i64, i64* %175, align 8
  %177 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %178 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %177, i32 0, i32 2
  %179 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %178, i32 0, i32 0
  %180 = load i64, i64* %179, align 8
  %181 = sub nsw i64 %176, %180
  %182 = add nsw i64 %172, %181
  %183 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %184 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %183, i32 0, i32 1
  store i64 %182, i64* %184, align 8
  br label %185

185:                                              ; preds = %29, %152, %119, %86, %53
  %186 = load i32, i32* @ABM_SETPOS, align 4
  %187 = call i64 @SHAppBarMessage(i32 %186, %struct.TYPE_5__* %4)
  store i64 %187, i64* %5, align 8
  %188 = load i64, i64* %5, align 8
  %189 = load i64, i64* @TRUE, align 8
  %190 = icmp eq i64 %188, %189
  %191 = zext i1 %190 to i32
  %192 = load i64, i64* %5, align 8
  %193 = call i32 (i32, i8*, ...) @ok(i32 %191, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i64 %192)
  %194 = load %struct.testwindow_info*, %struct.testwindow_info** %3, align 8
  %195 = getelementptr inbounds %struct.testwindow_info, %struct.testwindow_info* %194, i32 0, i32 1
  %196 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %197 = bitcast %struct.TYPE_4__* %195 to i8*
  %198 = bitcast %struct.TYPE_4__* %196 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %197, i8* align 8 %198, i64 32, i1 false)
  %199 = load i32, i32* %2, align 4
  %200 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %201 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %200, i32 0, i32 2
  %202 = load i64, i64* %201, align 8
  %203 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %204 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %203, i32 0, i32 0
  %205 = load i64, i64* %204, align 8
  %206 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %207 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %206, i32 0, i32 3
  %208 = load i64, i64* %207, align 8
  %209 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %210 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %209, i32 0, i32 2
  %211 = load i64, i64* %210, align 8
  %212 = sub nsw i64 %208, %211
  %213 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %214 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %213, i32 0, i32 1
  %215 = load i64, i64* %214, align 8
  %216 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %217 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %216, i32 0, i32 0
  %218 = load i64, i64* %217, align 8
  %219 = sub nsw i64 %215, %218
  %220 = load i64, i64* @TRUE, align 8
  %221 = call i32 @MoveWindow(i32 %199, i64 %202, i64 %205, i64 %212, i64 %219, i64 %220)
  br label %222

222:                                              ; preds = %185, %27, %21
  ret void
}

declare dso_local i64 @GetWindowLongPtrA(i32, i32) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @win_skip(i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @SHAppBarMessage(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @MoveWindow(i32, i64, i64, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
